# pr2pdf

./: .gitignore  LICENSE  README.md  environment.yaml  pr2pdf.py  pyproject.toml
src/pr2pdf/: __init__.py  __main__.py  commit.py  file_diff.py  github_user.py  pr_details.py  pull_request.py  time.py
